# cubix-data-engineer-master

./: README.md  pyproject.toml
src/: pyspark_tutorial.ipynb  week_2_pyspark_homework.ipynb
src/Capstone_Project/: source_data_mappings.xlsx
src/Capstone_Project/1st_batch/: calendar.csv  customers_1.csv  product_category.csv  product_subcategory.csv  products.csv  sales_1.csv
src/Capstone_Project/2nd_batch/: customers_2.csv  product_category_ingest_1.csv  product_subcategory_ingest_1.csv  products_ingest_1.csv  sales_202405.csv
src/Capstone_Project/3rd_batch/: customers_3.csv  product_category_ingest_2.csv  product_subcategory_ingest_2.csv  sales_202406.csv
src/Capstone_Project/4th_batch/: customers_4.csv  sales_202407.csv
src/Capstone_Project/ingestion_configs/: batch_1.json  batch_2.json  batch_3.json  batch_4.json
src/homeworks/: week_2_pyspark_homework.ipynb  week_3_advanced_sql_homework.ipynb
src/spark-warehouse/: delta_tutorial.ipynb
